--- a/ClientAngular/package.json
+++ b/ClientAngular/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "resize-observer-polyfill": "^1.5.1"
   },
   "private": true,
   "dependencies": {
@@ -23,10 +24,13 @@
     "@angular/platform-browser-dynamic": "~8.2.12",
     "@angular/router": "~8.2.12",
     "angular-async-await": "^1.1.2",
+    "angular-resize-element": "^1.0.16",
     "bootstrap": "^4.3.1",
     "class-transformer": "^0.2.3",
     "hammerjs": "^2.0.8",
+    "isotope-packery": "^2.0.1",
     "reflect-metadata": "^0.1.13",
+    "resize-observer": "^1.0.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
@@ -36,9 +40,9 @@
     "@angular/cli": "~8.3.15",
     "@angular/compiler-cli": "~8.2.12",
     "@angular/language-service": "~8.2.12",
-    "@types/node": "~8.9.4",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
     "codelyzer": "^5.0.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
@@ -48,6 +52,7 @@
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.0",
     "protractor": "~5.4.0",
+    "resize-observer-polyfill": "^1.5.1",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
     "typescript": "~3.5.3"
