--- a/ClientAngular/package.json
+++ b/ClientAngular/package.json
@@ -29,6 +29,7 @@
     "class-transformer": "^0.2.3",
     "hammerjs": "^2.0.8",
     "isotope-packery": "^2.0.1",
+    "ngx-dropdown": "0.0.22",
     "reflect-metadata": "^0.1.13",
     "resize-observer": "^1.0.0",
     "rxjs": "~6.4.0",
